responsividade do cadastro

--- a/educaUS_front/educaUS/src/app/rodape/rodape.component.html
+++ b/educaUS_front/educaUS/src/app/rodape/rodape.component.html
@@ -3,7 +3,7 @@
     <!-- Grid container -->
     <div class="container p-4 pb-0">
   
-      <section class="mb-4">
+      <section>
   
         <a class="btn btn-outline-light btn-floating m-1" onClick='window.scroll(0,0)' role="button"> Home</a>
   
