--- a/educaUS_front/educaUS/src/app/cadastro/cadastro.component.css
+++ b/educaUS_front/educaUS/src/app/cadastro/cadastro.component.css
@@ -3,9 +3,7 @@
 .rcorners2 {
     border-radius: 15px;
     border: 1px solid #004AAD;
-    padding: 20px;
-    width: 200px;
-    height: 700px;
+    padding: 1rem;
     background-color: white;
   }
 
@@ -19,4 +17,22 @@
 
   .fs-13pt{
       font-size: 13pt;
+  }
+
+  @media (max-width: 790px) {
+    .rcorners2{
+        margin: 0 -10% 0 -10%;
+    }
+  }
+
+  @media (max-width: 767px) {
+    .rcorners2{
+        margin: 0 20% 0 20%;
+    }
+  }
+
+  @media (max-width: 600px) {
+    .rcorners2{
+        margin: 0 5% 0 5%;
+    }
   }
